--- a/tailwind/tailwind.css
+++ b/tailwind/tailwind.css
@@ -13,3 +13,47 @@
         height: 100%;
     }
 }
+
+@layer components {
+    .container-shadow {
+        box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.3);
+    }
+
+    .section-container {
+        @apply px-7 py-5 flex-1;
+    }
+
+    .modal {
+       position: absolute;
+       top: 0;
+       left: 0;
+       width: 100%;
+       height: 100%;
+    }
+
+    .modal-container {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        z-index: 0;
+    }
+
+    .modal-backdrop {
+        position: absolute;
+        top: 0;
+        left: 0;
+        cursor: pointer;
+        width: 100%;
+        height: 100%;
+        background-color:rgba(0,0,0,0.4);
+        z-index: 10;
+    }
+
+    .modal-content {
+       @apply absolute top-1/2 left-1/2 bg-white;
+       z-index: 20;
+       transform: translate(-50%, -50%);
+       padding: 15px 25px;
+       border-radius: 10px;
+    }
+}
